# arbitration-dlib

./: .dockerignore  .gitignore  .gitmodules  .solcover.js  .soliumrc.json  ArbitrationDockerfileDev  CHANGELOG.md  CONTRIBUTING.md  COPYING  Dockerfile  Dockerfile.test  DockerfileDev  README.md  TODO.md  buidler.config.ts  build_arbitration_test_image_dev.sh  build_compute_test_image.sh  build_compute_test_image_dev.sh  coverage.json  deploy  deploy_development.sh  dispatcher-entrypoint.sh  hardhat.config.ts  mock_instances.js  npm-shrinkwrap.json  package-lock.json  package.json  prepare_python_tests.sh  prepare_python_tests_coverage.sh  requirements.txt  run_python_tests.sh  run_python_tests_coverage.sh  test_mm.js  truffle-config.js  truffle.js  tsconfig.json
.github/workflows/: docker.yml  offchain-test.yml  onchain-test.yml  test.yml
arbitration_test/: Cargo.toml  Cargo_cache.toml
arbitration_test/src/: arbitration_test.rs  lib.rs  main.rs
compute/: Cargo.toml
compute/src/: compute.rs  emulator_service.rs  lib.rs  main.rs  mm.rs  partition.rs  vg.rs
contracts/: ArbitrationTestInstantiator.sol  ArbitrationTestInterface.sol  BitsManipulationLibrary.sol  ComputeInstantiator.sol  ComputeInterface.sol  Decorated.sol  DepthInterface.sol  DepthLib.sol  Hasher.sol  Instantiator.sol  MCProtocol.sol  MMInstantiator.sol  MMInterface.sol  MMLib.sol  MachineInterface.sol  MemoryGameInstantiator.sol  Merkle.sol  Migrations.sol  PartitionInstantiator.sol  PartitionInterface.sol  PartitionLib.sol  PartitionTestAux.sol  RiscVDecoder.sol  RiscVDecoderHexInstructions.sol  ShufflerInstantiator.sol  SimpleDataLogger.sol  SimpleMemoryInstantiator.sol  SimpleMemoryInterface.sol  SimpleMemoryLib.sol  Subleq.sol  SubleqInterface.sol  SubleqLib.sol  TempMerkle.sol  TestHash.sol  VGInstantiator.sol  VGInterface.sol  greeter.sol  mm.t.sol  mortal.sol  partition.sol  (+2 more)
contracts/RiscVContracts/: RiscVDecoder.sol  RiscVMain.sol
contracts/RiscVInstructions/: .BranchInstructions.sol.swp  BranchInstructions.sol
contracts/lib/: BitsManipulationLibrary.sol  strings.sol
contracts/test/: ArbitrationTestInstantiator.sol  ArbitrationTestInterface.sol  MMInstantiatorTestAux.sol  PartitionTestAux.sol  SimpleMemoryInstantiator.sol  Subleq.sol  TestHash.sol
deploy/: 01_libs.ts  02_tests.ts
deploy-tests/: 02_tests.ts
deprecated/: MCProtocol.sol  MemoryGameInstantiator.sol  vg.js
emulator/: Cargo.toml  build.rs
emulator/src/: lib.rs
export/abi/: goerli.json  (+5 more)
migrations/: 2_deploy_libraries.js  3_deploy_test.js  3_deploy_tests.js
old_test/: test-depth.js  test-hireCPU.js  test-mm.js  test-testMemory.js
src/: bet.sol  bet.t.sol  depth.sol  hireCPU.sol  mm.sol  mm.t.sol  partition.sol  partition.t.sol  subleq.sol  testMemory.sol
test/: README.md  TestPartitionInstantiator.sol  conftest.py  depth.js  install_solc.py  mm.js  partition.js  simpleMemory.js  subleq.js  test-depth.js  test-hireCPU.js  test-mm.js  test-partition.js  test-subleq.js  test.js  test_contract.js  test_hash.js  test_hash.py  test_javascript_subleq.js  test_main.py  test_mm.js  test_mm_contract.js  test_mm_getters.py  test_mm_throws.py  test_partition.js  test_partition_claim_victory_by_time.py  test_partition_getters.py  test_partition_instantiator.py  test_partition_instantiator_throws.py  test_partition_make_query.py  test_partition_present_divergence.py  test_partition_reply_query.py  test_partition_slice.py  test_subleq.js  test_testMemory.js  test_transfer.js  vg.js
test_python/: README  README.md  conftest.py  prepare_python_test.sh  run_all_tests.sh  run_tests.sh  test_hash.py  test_main.py  test_mm_getters.py  test_mm_throws.py  test_partition_claim_victory_by_time.py  test_partition_getters.py  test_partition_instantiator.py  test_partition_instantiator_throws.py  test_partition_make_query.py  test_partition_present_divergence.py  test_partition_reply_query.py  test_partition_slice.py
utils/: mm.js  subleq.js  tools.js
(+99 files in other folders)
