[package]
description = "Cartesi Verification Game"
homepage = "https://cartesi.io"
name = "compute"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}
transaction = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}
configuration = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}
utils = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}
ethereum-types = "0.4"
ethabi = "6.1.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
emulator_interface = { git = "ssh://git@github.com/cartesi-corp/grpc-interfaces", tag = "v0.1.0-rc.1"}
state = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}
dispatcher = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}
emulator = { git = "ssh://git@github.com/cartesi-corp/dispatcher", branch = "develop"}


