[package]
description = "Cartesi Verification Game"
homepage = "https://cartesi.io"
name = "compute"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
error = { path = "../dispatcher/error" }
transaction = { path = "../dispatcher/transaction" }
configuration = { path = "../dispatcher/configuration" }
utils = { path = "../dispatcher/utils" }
ethereum-types = "0.9.0"
ethabi = "12.0.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../dispatcher/state" }
emulator = { path = "../emulator" }
dispatcher = { path = "../dispatcher/dispatcher" }
grpc = { git = "https://github.com/cartesi/grpc-rust", branch = "make_marshall_public" }
protobuf = "2"
bytes = "0.4.12"
hex = "0.4.2"
