[package]
description = "Cartesi Emulator"
homepage = "https://cartesi.io"
name = "emulator"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
httpbis = "~0.7"
protobuf = "2"
grpc = { git = "https://github.com/stepancheg/grpc-rust", branch = "v0.6" }
futures = "~0.1"
futures-cpupool = "~0.1"
rustc-hex = "2.0.1"
ethereum-types = "0.4"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[lib]
name = "emulator"
path = "src/lib.rs"
